src/objects/Hotel__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Postal_Code__c</fullName>
        <label>Postal_Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_or_Province__c</fullName>
        <label>State_or_Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Hotel</label>
    <nameField>
        <label>Hotel Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hotels</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>